# lala-parsing

./: CMakeLists.txt  CMakePresets.json  README.md
example/flatzinc/: flatzinc.cpp
example/xcsp3/: cumulative.xml  table.xml  xcsp3.cpp
include/: XCSP3_parser.hpp  flatzinc_parser.hpp
include/lala/: XCSP3_parser.hpp  flatzinc_parser.hpp  nnv_parser.hpp  onnx_parser.hpp  output.hpp  smt_parser.hpp  solver_output.hpp  string_util.hpp  tcn_parser.hpp  tcn_writer.hpp  vnnlib_parser.hpp
include/lala/onnxruntime-linux-x64-gpu-1.19.2/: GIT_COMMIT_ID
include/lala/onnxruntime-linux-x64-gpu-1.19.2/lib/: libonnxruntime.so.1
include/lala/onnxruntime-linux-x64-gpu-1.19.2/lib/cmake/onnxruntime/: onnxruntimeConfigVersion.cmake  onnxruntimeTargets-release.cmake
include/lala/onnxruntime-linux-x64-gpu-1.19.2/lib/pkgconfig/: libonnxruntime.pc
